turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:3: error: not enough arguments for method makeHouse: (length: Int)Unit.
Unspecified value parameter length.
    makeHouse()
             ^